--- a/source/stylesheets/app.less
+++ b/source/stylesheets/app.less
@@ -85,5 +85,6 @@
 @import "pages/health-center/health-center";
 @import "pages/docs/docs";
 @import "pages/employees/employees";
+@import "pages/contacts/contacts";
 
 @import "pages/footer/footer";
