--- a/source/stylesheets/pages/_variables.less
+++ b/source/stylesheets/pages/_variables.less
@@ -10,6 +10,7 @@
 @marine-color:        #0ac;
 @green-color:         #5a0;
 @blue-color:          #0ac;
+@red-color:           #f63;
 @border-color:        #d4dee7;
 
 
