Begin create page playschool.html

--- a/source/stylesheets/app.less
+++ b/source/stylesheets/app.less
@@ -73,6 +73,7 @@
 @import "pages/_forms";
 @import "pages/_pagination";
 @import "pages/_navs";
+@import "pages/_slider";
 @import "pages/_row-eq-height";
 @import "pages/total";
 
@@ -86,5 +87,6 @@
 @import "pages/docs/docs";
 @import "pages/employees/employees";
 @import "pages/contacts/contacts";
+@import "pages/playschool/playschool";
 
 @import "pages/footer/footer";
