Complete edit page playschool.html

--- a/source/stylesheets/pages/_slider.less
+++ b/source/stylesheets/pages/_slider.less
@@ -3,13 +3,13 @@
 	background: #fff;
 	float: left;
 	box-shadow: 0px 1px 7px rgba(0,0,0,0.25);
-	transform: rotate(2deg);
+	transform: rotate(3deg);
 	&__rotate {
 		background: #fff;
 		float: left;
 		padding: 12px 12px;
 		box-shadow: 0px 1px 7px rgba(0,0,0,0.25);
-		transform: rotate(-4deg);
+		transform: rotate(-5deg);
 	}
 }
 
@@ -25,8 +25,11 @@
 			display: none;
 		}
 	}
+	& &__titles,
 	& &__images {
 		width: 425px;
+	}
+	& &__images {
 		height: 350px;
 		overflow: hidden;
 		li {
@@ -34,14 +37,14 @@
 			overflow: hidden;
 			margin: 0px;
 			padding: 0px;
-			border: 1px solid #fff;
+			
 			transform: rotate(360deg);
 			a,
 			img {
 				display: block;
 			}
-			img {
-				
+			& img {
+				border: 1px solid #fff;
 			}
 		}
 	}
@@ -61,6 +64,28 @@
 			img {
 				border: 4px solid @border-color;
 			}
+			&:hover,
+			&.active {
+				img {
+					border-color: #fd967c;
+				}
+			}
+		}
+	}
+	& &__titles {
+		overflow: hidden;
+		li {
+			width: 100%;
+			text-align: center;
+			float: left;
+			position: absolute;
+			font-size: 20px;
+			font-family: 'intro_script_rh2_base';			
+			opacity: 0.0;
+			&.active {
+				position: relative;
+				opacity: 1.0;
+			}
 		}
 	}
 	&__prev,
@@ -76,11 +101,27 @@
 	&__prev {
 		border-radius: 0px 4px 4px 0px;
 		text-align: left;
-		left: 12px;
+		left: 11px;
+		padding-left: 2px;
+		&:hover {
+			.icons {
+				&:after {
+					.sprite(@arrow-left-hover);
+				}
+			}
+		}
 	}
 	&__next {
 		border-radius: 4px 0px 0px 4px;
 		text-align: right;
-		right: 12px;
+		right: 11px;
+		padding-right: 2px;
+		&:hover {
+			.icons {
+				&:after {
+					.sprite(@arrow-right-hover);
+				}
+			}
+		}
 	}
 }
