--- a/source/stylesheets/pages/playschool/playschool.less
+++ b/source/stylesheets/pages/playschool/playschool.less
@@ -3,6 +3,8 @@
 	p {
 		font-size: 20px;
 		font-family: 'houschka_roundeddemibold';
+		line-height: 1.5;
+		margin-bottom: 30px;
 		span {
 			&.green {
 				background: #d4ffb5;
@@ -22,9 +24,13 @@
 			margin-top: 10px;
 		}
 	}
+
 	&__gallery {
+		padding: 18px 0px 18px;
+		margin-bottom: 43px;
 		.thumbnail {
 			background: transparent;
+			margin-bottom: 0px;
 			box-shadow: none;
 			border-radius: 0px;
 			border: 0px none;
@@ -33,11 +39,37 @@
 			}
 		}
 	}
+	&__content {
+		margin-left: -60px;
+		margin-right: -60px;
+		padding-left: 60px;
+		padding-right: 60px;
+	}
+	&__title {
+		font-size: 70px;
+		line-height: 1.1;
+		font-family: 'houschka_roundedextrabold';
+		color: @marine-color;
+		position: absolute;
+		right: 0px;
+		left: 0px;
+	}
+	&__subtitle {
+		font-family: 'houschka_roundedextrabold';
+		color: @base-dark-color;
+		font-size: 30px;
+		margin-bottom: 31px;
+	}
 	&__smalltitle {
 		font-family: 'intro_script_rh2_base';
 		font-size: 30px;
 		line-height: 1.0;
 		margin-bottom: 30px;
+	}	
+	&__img-top {
+		max-width: 100%;
+		height: auto;
+		margin: 20px 0px 40px;
 	}
 	&__tabs {
 		text-align: center;
@@ -75,36 +107,17 @@
 			}
 		}
 	}
-	&__content {
-		margin-left: -60px;
-		margin-right: -60px;
-		padding-left: 60px;
-		padding-right: 60px;
-	}
-	&__title {
-		font-size: 70px;
-		line-height: 1.1;
-		font-family: 'houschka_roundedextrabold';
-		color: @marine-color;
-		position: absolute;
-		right: 0px;
-		left: 0px;
-	}
-	&__img-top {
-		max-width: 100%;
-		height: auto;
-		margin: 20px 0px 40px;
-	}
 	&__pill {
 		background: #ebf5f9 url(../images/whitedot-bg.png) repeat 50% 20px;
 		border-radius: 120px;
 		height: 240px;
 		margin-left: -60px;
 		margin-right: -60px;
-		padding-left: 60px;
-		padding-right: 60px;
+		margin: 10px -60px -10px;
 		text-align: center;
-		padding: 35px 0px 0px;
+		padding: 35px 60px 0px;
+		position: relative;
+		z-index: 100;
 		&-content {
 			font-size: 20px;
 			color: @base-color;
