--- a/source/stylesheets/app.less
+++ b/source/stylesheets/app.less
@@ -88,5 +88,6 @@
 @import "pages/employees/employees";
 @import "pages/contacts/contacts";
 @import "pages/playschool/playschool";
+@import "pages/health-article/health-article";
 
 @import "pages/footer/footer";
