--- a/source/stylesheets/pages/_pagination.less
+++ b/source/stylesheets/pages/_pagination.less
@@ -16,6 +16,11 @@
 		display: block;
 		text-align: center;
 		list-style-type: none;
+		&:after,
+		&:before {
+			background: transparent;
+			display: none;
+		}
 		&:first-child {
 			.icons {
 				margin-right: 17px;
