--- a/source/stylesheets/pages/_typo.less
+++ b/source/stylesheets/pages/_typo.less
@@ -142,7 +142,7 @@ b,strong {
 	font-weight: normal;
 }
 .rub {
-	&:extend(.font-rouble);
+	font-family: 'als_rublregular';
 	text-transform: none;
 }
 .uppercase {
