--- a/source/stylesheets/pages/news/news.less
+++ b/source/stylesheets/pages/news/news.less
@@ -7,6 +7,12 @@
 	}
 	&__item {
 		margin-bottom: 30px;
+		list-style-type: none;
+		&:after,
+		&:before {
+			background: transparent;
+			display: none;
+		}
 		&:last-child {
 			margin-bottom: 0px;
 		}
@@ -65,6 +71,11 @@
 		&__item,
 		&__items {
 			list-style-type: none;
+			&:after,
+			&:before {
+				background: transparent;
+				display: none;
+			}
 			margin: 0px 0px;
 			padding: 0px 0px;
 		}
