--- a/source/stylesheets/pages/playschool/playschool.less
+++ b/source/stylesheets/pages/playschool/playschool.less
@@ -120,10 +120,13 @@
 		z-index: 100;
 		&-content {
 			font-size: 20px;
+			font-family: 'houschka_roundeddemibold';
 			color: @base-color;
 		}
 		a {
 			color: @orange-color;
+			display: inline-block;
+			line-height: 0.9;
 			border-bottom: 1px solid;
 			&:hover {
 				text-decoration: none;
