--- a/source/templates/pages/news.html
+++ b/source/templates/pages/news.html
@@ -55,7 +55,9 @@ name: about
 									</a>
 								</div>
 								<div class="col-md-48 col-lg-11">
-									<img class="news-list__item-frame" src="images/pages-images/news/img-1.jpg" width="137" height="112" alt="" />
+									<a href="">
+										<img class="news-list__item-frame" src="images/pages-images/news/img-1.jpg" width="137" height="112" alt="" />
+									</a>
 								</div>
 							</div>
 						</li>
@@ -73,7 +75,9 @@ name: about
 									</a>
 								</div>
 								<div class="col-md-48 col-lg-11">
-									<img class="news-list__item-frame" src="images/pages-images/news/img-2.jpg" width="137" height="112" alt="" />
+									<a href="">
+										<img class="news-list__item-frame" src="images/pages-images/news/img-2.jpg" width="137" height="112" alt="" />
+									</a>
 								</div>
 							</div>
 						</li>
@@ -92,7 +96,9 @@ name: about
 									</a>
 								</div>
 								<div class="col-md-48 col-lg-11">
-									<img class="news-list__item-frame" src="images/pages-images/news/img-3.jpg" width="137" height="112" alt="" />
+									<a href="">
+										<img class="news-list__item-frame" src="images/pages-images/news/img-3.jpg" width="137" height="112" alt="" />
+									</a>
 								</div>
 							</div>
 						</li>
@@ -129,7 +135,9 @@ name: about
 									</a>
 								</div>
 								<div class="col-md-48 col-lg-11">
-									<img class="news-list__item-frame" src="images/pages-images/news/img-4.jpg" width="137" height="112" alt="" />
+									<a href="">
+										<img class="news-list__item-frame" src="images/pages-images/news/img-4.jpg" width="137" height="112" alt="" />
+									</a>
 								</div>
 							</div>
 						</li>
