--- a/source/stylesheets/pages/_navs.less
+++ b/source/stylesheets/pages/_navs.less
@@ -90,6 +90,7 @@
 .leftnav {
 	position: relative;
 	padding: 45px 0px;
+	max-width: 200px;
 	li {
 		&:before,
 		&:after {
@@ -142,7 +143,7 @@
 			}
 		}
 		.decorate {
-			display: inline-block;
+			/*display: inline-block;*/
 			line-height: 1.1;
 			border-bottom: 1px solid;
 		}
