--- a/source/stylesheets/app.less
+++ b/source/stylesheets/app.less
@@ -89,5 +89,6 @@
 @import "pages/contacts/contacts";
 @import "pages/playschool/playschool";
 @import "pages/health-article/health-article";
+@import "pages/article/article";
 
 @import "pages/footer/footer";
