--- a/source/stylesheets/pages/health-article/health-article.less
+++ b/source/stylesheets/pages/health-article/health-article.less
@@ -22,6 +22,12 @@
 		padding: 20px 55px 30px 60px;
 		margin-bottom: 37px;
 		position: relative;
+		&-title {
+			color: @base-dark-color;
+			font-size: 30px;
+			font-family: 'houschka_roundedextrabold';
+			margin-bottom: 12px;
+		}
 		&:after {
 			content: "";
 			display: block;
