--- a/source/stylesheets/pages/total.less
+++ b/source/stylesheets/pages/total.less
@@ -86,6 +86,34 @@ a:active:focus,button:active:focus {
 		margin-left: 6px;
 	}
 }
+.feedback {
+	line-height: 1.1;
+	color: @base-dark-color;
+	font-size: 15px;
+	font-weight: 700;
+	display: inline-block;
+	padding-top: 4px;
+	padding-bottom: 4px;
+	.decorate {
+		display: inline-block;
+		vertical-align: middle;
+		font-size: 15px;
+		line-height: 1.0;
+		border-bottom: 1px solid;
+		margin-left: 10px;
+	}
+	&:hover {
+		color: @orange-color;
+		.icons--back {
+			&:after {
+				.sprite(@back-hover);
+			}
+		}
+		.decorate {
+			border-bottom-color: transparent;
+		}
+	}
+}
 .shadow-line {
 	display: block;
 	position: relative;
