--- a/source/stylesheets/pages/news/news.less
+++ b/source/stylesheets/pages/news/news.less
@@ -5,14 +5,17 @@
 		font-family: 'houschka_roundedextrabold';
 		line-height: 1.17;
 	}
-	&__item {
-		margin-bottom: 30px;
-		list-style-type: none;
+	li.news__item {
 		&:after,
 		&:before {
 			background: transparent;
 			display: none;
-		}
+		}		
+	}
+	&__item {
+		margin-bottom: 30px;
+		list-style-type: none;
+
 		&:last-child {
 			margin-bottom: 0px;
 		}
