--- a/source/templates/partials/topnav.html
+++ b/source/templates/partials/topnav.html
@@ -6,27 +6,27 @@
 		</a>
 	</li>
 	<li class="topnav__item {{#is page.name 'nursery'}}active{{/is}}">
-		<a class="orange" href="">
+		<a class="orange" href="playschool.html">
 			<span class="decorate">Ясли</span>
 		</a>
 	</li>
 	<li class="topnav__item {{#is page.name 'kindergarten'}}active{{/is}}">
-		<a class="marine" href="">
+		<a class="marine" href="playschool.html">
 			<span class="decorate">Детский сад</span>
 		</a>
 	</li>
 	<li class="topnav__item {{#is page.name 'grade-school'}}active{{/is}}">
-		<a class="green" href="">
+		<a class="green" href="playschool.html">
 			<span class="decorate">Начальная школа</span>
 		</a>
 	</li>
 	<li class="topnav__item {{#is page.name 'services'}}active{{/is}}">
-		<a href="">
+		<a href="added-services.html">
 			<span class="decorate">Доп. услуги</span>
 		</a>
 	</li>
 	<li class="topnav__item {{#is page.name 'contacts'}}active{{/is}}">
-		<a href="">
+		<a href="contacts.html">
 			<span class="decorate">Контакты</span>
 		</a>
 	</li>
