--- a/source/stylesheets/app.less
+++ b/source/stylesheets/app.less
@@ -90,5 +90,6 @@
 @import "pages/playschool/playschool";
 @import "pages/health-article/health-article";
 @import "pages/article/article";
+@import "pages/fscreen-slider/fscreen-slider";
 
 @import "pages/footer/footer";
