--- a/source/templates/pages/health-article.html
+++ b/source/templates/pages/health-article.html
@@ -97,6 +97,64 @@ name: health-article
 						Запись по телефону: 8 (917) 521-42-44
 					</p>
 					
+					
+					<!-- [Slider] -->
+						<div id="fscreen" class="fscreen">
+							
+							<div id="fscreen-slider" class="fscreen-slider">
+								
+								<div class="fscreen-slider-inner">
+									<ul>
+										<li>
+											<a href="images/pages-images/health-article/slider/img-big.jpg"></a>
+										</li>
+										<li>
+											<a href="images/pages-images/health-article/slider/img-big.jpg"></a>
+										</li>
+										<li>
+											<a href="images/pages-images/health-article/slider/img-big.jpg"></a>
+										</li>
+										<li>
+											<a href="images/pages-images/health-article/slider/img-big.jpg"></a>
+										</li>
+									</ul>
+								</div>
+								
+								<div class="fscreen-slider-title">
+									<ul>
+										<li>Название фотографии,<br />мероприятия или </li>
+										<li>Название фотографии,<br />мероприятия или места</li>
+										<li>Название фотографии,<br />мероприятия или места</li>
+										<li>Название фотографии,<br />мероприятия или места</li>
+									</ul>
+								</div>
+								
+							</div>
+							
+							<div id="fscreen-thumbs" class="fscreen-thumbs fscreen-thumbs--vertical">
+								<div class="fscreen-thumbs-inner">
+									<ul>
+										<li>
+											<a class="thumb" href="images/pages-images/health-article/slider/thumb-1.jpg"></a>
+										</li>
+										<li>
+											<a class="thumb" href="images/pages-images/health-article/slider/thumb-2.jpg"></a>
+										</li>
+										<li>
+											<a class="thumb" href="images/pages-images/health-article/slider/thumb-3.jpg"></a>
+										</li>
+										<li>
+											<a class="thumb" href="images/pages-images/health-article/slider/thumb-4.jpg"></a>
+										</li>
+									</ul>
+								</div>
+							</div>
+							
+						</div>
+					<!-- [/Slider] -->
+					
+					
+					<!-- [Slider] -->
 					<div class="slider-frame m-t-50 m-b-50">
 						<div class="slider-frame__rotate">
 							<div class="unqslider js-slider">
@@ -147,6 +205,7 @@ name: health-article
 							</div>
 						</div>
 					</div>
+					<!-- [/Slider] -->
 
 				</div>
 
