--- a/source/templates/partials/leftnav.html
+++ b/source/templates/partials/leftnav.html
@@ -10,12 +10,12 @@
 		</a>
 	</li>
 	<li class="leftnav__item {{#is page.name 'contacts'}}active{{/is}}">
-		<a href="">
+		<a href="contacts.html">
 			<span class="decorate">Расположение</span>
 		</a>
 	</li>
 	<li class="leftnav__item {{#is page.name 'employees'}}active{{/is}}">
-		<a href="">
+		<a href="employees.html">
 			<span class="decorate">Сотрудники</span>
 		</a>
 	</li>
