--- a/source/templates/pages/health-article.html
+++ b/source/templates/pages/health-article.html
@@ -99,58 +99,64 @@ name: health-article
 					
 					
 					<!-- [Slider] -->
-						<div id="fscreen" class="fscreen">
+					<div class="slider-frame m-t-50 m-b-50">
+						<div class="slider-frame__rotate">
 							
-							<div id="fscreen-slider" class="fscreen-slider">
+							<div id="fscreen" class="fscreen">
 								
-								<div class="fscreen-slider-inner">
-									<ul>
-										<li>
-											<a href="images/pages-images/health-article/slider/img-big.jpg"></a>
-										</li>
-										<li>
-											<a href="images/pages-images/health-article/slider/img-big.jpg"></a>
-										</li>
-										<li>
-											<a href="images/pages-images/health-article/slider/img-big.jpg"></a>
-										</li>
-										<li>
-											<a href="images/pages-images/health-article/slider/img-big.jpg"></a>
-										</li>
-									</ul>
+								<div id="fscreen-slider" class="fscreen-slider">
+									
+									<div class="fscreen-slider-inner">
+										<ul>
+											<li>
+												<a href="images/pages-images/health-article/slider/img-big.jpg"></a>
+											</li>
+											<li>
+												<a href="images/pages-images/health-article/slider/img-big.jpg"></a>
+											</li>
+											<li>
+												<a href="images/pages-images/health-article/slider/img-big.jpg"></a>
+											</li>
+											<li>
+												<a href="images/pages-images/health-article/slider/img-big.jpg"></a>
+											</li>
+										</ul>
+									</div>
+									
+									<div class="fscreen-slider-title">
+										<ul>
+											<li>Название фотографии,<br />мероприятия или </li>
+											<li>Название фотографии,<br />мероприятия или места</li>
+											<li>Название фотографии,<br />мероприятия или места</li>
+											<li>Название фотографии,<br />мероприятия или места</li>
+										</ul>
+									</div>
+									
 								</div>
 								
-								<div class="fscreen-slider-title">
-									<ul>
-										<li>Название фотографии,<br />мероприятия или </li>
-										<li>Название фотографии,<br />мероприятия или места</li>
-										<li>Название фотографии,<br />мероприятия или места</li>
-										<li>Название фотографии,<br />мероприятия или места</li>
-									</ul>
+								<div id="fscreen-thumbs" class="fscreen-thumbs fscreen-thumbs--vertical">
+									<div class="fscreen-thumbs-inner">
+										<ul>
+											<li>
+												<a class="thumb" href="images/pages-images/health-article/slider/thumb-1.jpg"></a>
+											</li>
+											<li>
+												<a class="thumb" href="images/pages-images/health-article/slider/thumb-2.jpg"></a>
+											</li>
+											<li>
+												<a class="thumb" href="images/pages-images/health-article/slider/thumb-3.jpg"></a>
+											</li>
+											<li>
+												<a class="thumb" href="images/pages-images/health-article/slider/thumb-4.jpg"></a>
+											</li>
+										</ul>
+									</div>
 								</div>
 								
-							</div>
-							
-							<div id="fscreen-thumbs" class="fscreen-thumbs fscreen-thumbs--vertical">
-								<div class="fscreen-thumbs-inner">
-									<ul>
-										<li>
-											<a class="thumb" href="images/pages-images/health-article/slider/thumb-1.jpg"></a>
-										</li>
-										<li>
-											<a class="thumb" href="images/pages-images/health-article/slider/thumb-2.jpg"></a>
-										</li>
-										<li>
-											<a class="thumb" href="images/pages-images/health-article/slider/thumb-3.jpg"></a>
-										</li>
-										<li>
-											<a class="thumb" href="images/pages-images/health-article/slider/thumb-4.jpg"></a>
-										</li>
-									</ul>
-								</div>
 							</div>
 							
 						</div>
+					</div>
 					<!-- [/Slider] -->
 					
 					
