Complete Create Slider

--- a/source/templates/pages/added-services.html
+++ b/source/templates/pages/added-services.html
@@ -6,7 +6,7 @@ name:
 
 <div class="container m-b-40">
 	<div class="row">
-		<div class="col-md-48 col-lg-12">
+		<div class="col-xs-12">
 			
 			{{> leftnav }}
 
@@ -15,7 +15,7 @@ name:
 			</div>
 
 		</div>
-		<div class="col-md-48 col-lg-36">
+		<div class="col-xs-36">
 			
 			<div class="page">
 
@@ -32,12 +32,12 @@ name:
 					</div>
 
 					<div class="row health-center__item">
-						<div class="col-md-48 col-lg-12">
+						<div class="col-xs-12">
 							<a href="">
 								<img class="health-center__item-frame" src="images/pages-images/added-services/img-1.jpg" width="112" height="112" alt />
 							</a>
 						</div>
-						<div class="col-md-48 col-lg-36">
+						<div class="col-xs-36">
 							<h2 class="health-center__item-name">
 								<a class="decorate" href="">
 									Детские праздники
@@ -54,12 +54,12 @@ name:
 					</div>
 
 					<div class="row health-center__item">
-						<div class="col-md-48 col-lg-12">
+						<div class="col-xs-12">
 							<a href="">
 								<img class="health-center__item-frame" src="images/pages-images/added-services/img-2.jpg" width="112" height="112" alt />
 							</a>
 						</div>
-						<div class="col-md-48 col-lg-36">
+						<div class="col-xs-36">
 							<h2 class="health-center__item-name">
 								<a class="decorate" href="">
 									Доставка (трансфер)
@@ -76,12 +76,12 @@ name:
 					</div>
 
 					<div class="row health-center__item">
-						<div class="col-md-48 col-lg-12">
+						<div class="col-xs-12">
 							<a href="">
 								<img class="health-center__item-frame" src="images/pages-images/added-services/img-3.jpg" width="112" height="112" alt />
 							</a>
 						</div>
-						<div class="col-md-48 col-lg-36">
+						<div class="col-xs-36">
 							<h2 class="health-center__item-name">
 								<a class="decorate" href="">
 									Няня выходного дня
@@ -98,12 +98,12 @@ name:
 					</div>
 
 					<div class="row health-center__item">
-						<div class="col-md-48 col-lg-12">
+						<div class="col-xs-12">
 							<a href="">
 								<img class="health-center__item-frame" src="images/pages-images/added-services/img-4.jpg" width="112" height="112" alt />
 							</a>
 						</div>
-						<div class="col-md-48 col-lg-36">
+						<div class="col-xs-36">
 							<h2 class="health-center__item-name">
 								<a class="decorate" href="">
 									Консультации для родителей
@@ -120,12 +120,12 @@ name:
 					</div>
 
 					<div class="row health-center__item">
-						<div class="col-md-48 col-lg-12">
+						<div class="col-xs-12">
 							<a href="">
 								<img class="health-center__item-frame" src="images/pages-images/added-services/img-5.jpg" width="112" height="112" alt />
 							</a>
 						</div>
-						<div class="col-md-48 col-lg-36">
+						<div class="col-xs-36">
 							<h2 class="health-center__item-name">
 								<a class="decorate" href="">
 									Услуги логопеда
@@ -142,12 +142,12 @@ name:
 					</div>
 
 					<div class="row health-center__item">
-						<div class="col-md-48 col-lg-12">
+						<div class="col-xs-12">
 							<a href="">
 								<img class="health-center__item-frame" src="images/pages-images/added-services/img-5.jpg" width="112" height="112" alt />
 							</a>
 						</div>
-						<div class="col-md-48 col-lg-36">
+						<div class="col-xs-36">
 							<h2 class="health-center__item-name">
 								<a class="decorate" href="">
 									Школа будущих родителей
