--- a/source/templates/pages/contacts.html
+++ b/source/templates/pages/contacts.html
@@ -13,13 +13,13 @@ name: contacts
 		</h1>
 		
 		<div class="row">
-			<div class="col-md-48 col-lg-18 contacts__decorate">
+			<div class="col-xs-18 contacts__decorate">
 				
 				<h3 class="contacts__subtitle">
 					Наши телефоны:
 				</h3>
 				<div class="row">
-					<div class="col-md-48 col-lg-24">
+					<div class="col-xs-24">
 						<span class="contacts__label">
 							Администрация:
 						</span>
@@ -27,7 +27,7 @@ name: contacts
 							+7 (495) 943-70-02
 						</p>
 					</div>
-					<div class="col-md-48 col-lg-24">
+					<div class="col-xs-24">
 						<span class="contacts__label">
 							Директор:
 						</span>
@@ -58,7 +58,7 @@ name: contacts
 					Время работы администрации:
 				</h3>
 				<div class="row">
-					<div class="col-md-48 col-lg-24">
+					<div class="col-xs-24">
 						<span class="contacts__label">
 							Понедельник-четверг:
 						</span>
@@ -66,7 +66,7 @@ name: contacts
 							8.00 - 20.00
 						</p>
 					</div>
-					<div class="col-md-48 col-lg-24">
+					<div class="col-xs-24">
 						<span class="contacts__label">
 							Пятница:
 						</span>
@@ -78,7 +78,7 @@ name: contacts
 				
 				
 			</div>
-			<div class="col-md-48 col-lg-28 col-lg-offset-2">
+			<div class="col-xs-28 col-xs-offset-2">
 				
 				<iframe class="contacts__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4518.813197284275!2d37.26916863359072!3d55.50786501832352!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTXCsDMwJzI4LjMiTiAzN8KwMTYnMjQuOCJF!5e0!3m2!1sru!2sru!4v1452607698737" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 				
