--- a/source/stylesheets/pages/fscreen-slider/fscreen-slider.less
+++ b/source/stylesheets/pages/fscreen-slider/fscreen-slider.less
@@ -1,6 +1,43 @@
 
 .fscreen {
 	position: relative;
+	
+	&-slider-inner ul {
+		padding-bottom: 350px;
+	}
+	&-thumbs {
+		height: 350px;
+	}
+	&-slider,
+	&-slider ul {
+		width: 540px;
+	}
+	&--sm {
+		.fscreen {
+			&-slider-inner ul {
+				padding-bottom: 350px;
+			}
+			&-thumbs {
+				height: 350px;
+				margin-right: 15px;
+			}
+			&-slider {
+				&,
+				& ul {
+					width: 425px;
+				}
+				&-inner {
+					ul {
+						li {
+							a {
+								background-size: cover;
+							}
+						}
+					}
+				}
+			}
+		}
+	}
 	ul,
 	ul>li {
 		list-style-type: none;
@@ -14,7 +51,8 @@
 	&-thumbs {
 		position: absolute;
 		top: 0px;
-		right: -10px;
+		right: 0px;
+		margin: 38px -60px 0px 0px;
 		float: left;
 		overflow: hidden;
 		ul {
@@ -34,7 +72,7 @@
 					left: 0px;
 					width: 100%;
 					height: 100%;
-					border: 2px solid #d4dee7;
+					border: 4px solid #d4dee7;
 					transition: border 0.2s ease-out;
 					border-radius: 0px;
 					margin: 0px;
@@ -42,7 +80,7 @@
 				&.active:after,
 				&:hover:after {
 					border-width: 4px;
-					border-color: @orange-color;
+					border-color: #fd967c;;
 				}
 				a {
 					display: block;
@@ -52,26 +90,16 @@
 			}
 		}
 	}
-	&-slider,
-	&-slider ul,
-	&-thumbs {
-		height: 350px;
-	}
-	&-slider,
-	&-slider ul {
-		width: 540px;
-	}
 	&-slider {
 		position: relative;
 		&-inner {
-			position: absolute;
+			position: relative;
 			top: 0px;
 			right: 0px;
 			bottom: 0px;
 			left: 0px;
 			&>ul {
 				position: relative;
-				padding-bottom: 350px;
 			}
 			&>ul {
 				overflow: hidden;
@@ -85,6 +113,7 @@
 						background-position: 50% 50%;
 						background-repeat: no-repeat;
 						display: block;
+						border: 1px solid #fff;
 						width: 100%;
 						height: 100%;
 						cursor: default;
@@ -95,12 +124,19 @@
 		&-title {
 			position: relative;
 			width: 100%;
-			display: none;
 			&>ul {
-				&,
+				overflow: hidden;
 				&>li {
+					top: 0px;
 					position: absolute;
-					width: 100%;					
+					width: 100%;
+					padding: 20px 0px;
+					width: 100%;
+					text-align: center;
+					float: left;
+					position: absolute;
+					font-size: 20px;
+					font-family: 'intro_script_rh2_base';
 				}
 				&>li {
 					&.active {
@@ -112,47 +148,41 @@
 	}
 	&-prev-btn,
 	&-next-btn {
-		background: rgba(0,0,0,0.2);
+		background: #fff;
+		width: 21px;
+		height: 60px;
+		margin-top: -30px;
+		line-height: 60px;
 		position: absolute;
-		width: 40px;
-		height: 80px;
+		cursor: pointer;
 		top: 50%;
-		margin-top: -40px;
-		transition: background 0.4s;
 		z-index: 10;
 		&:after {
 			content: "";
 			display: block;
 			position: absolute;
-			border-style: solid;
-			width: 20px;
-			height: 20px;
-			top: 50%;
-			left: 50%;
-			margin-top: -12px;
-		}
-		&:hover {
-			background: rgba(0,0,0,0.65);
 		}
 	}
 	&-prev-btn {
-		border-radius: 0px 6px 6px 0px;
-		left: 0%;
+		border-radius: 0px 4px 4px 0px;
+		left: 0px;
+		padding-left: 2px;
 		&:after {
-			border-width: 0px 0px 2px 2px;
-			border-color: transparent transparent #fff #fff;
-			transform: rotate(45deg);
-			left: 14px;
+			.sprite(@arrow-left);
+			top: 50%;
+			left: 5px;
+			margin-top: -10px;
 		}
 	}
 	&-next-btn {
-		border-radius: 6px 0px 0px 6px;
-		right: 0%;
+		border-radius: 4px 0px 0px 4px;
+		right: 0px;
+		padding-right: 2px;
 		&:after {
-			border-width: 2px 2px 0px 0px;
-			border-color: #fff #fff transparent transparent;
-			transform: rotate(45deg);
-			left: 6px;
+			.sprite(@arrow-right);
+			top: 50%;
+			right: 5px;
+			margin-top: -10px;
 		}
 	}
 	&-fullscreen {
