--- a/source/stylesheets/pages/playschool/playschool.less
+++ b/source/stylesheets/pages/playschool/playschool.less
@@ -110,7 +110,7 @@
 	&__pill {
 		background: #ebf5f9 url(../images/whitedot-bg.png) repeat 50% 20px;
 		border-radius: 120px;
-		height: 240px;
+		min-height: 240px;
 		margin-left: -60px;
 		margin-right: -60px;
 		margin: 10px -60px -10px;
