--- a/source/stylesheets/pages/total.less
+++ b/source/stylesheets/pages/total.less
@@ -41,10 +41,15 @@
 .display-inline-block {
 	display: inline-block!important;
 }
-* {
-	transition: color 0.4s, opacity 0.6s;
+.content {
+	img {
+		max-width: 100%;
+		height: auto;
+	}
 }
-
+* {
+	transition: color 0.2s, opacity 0.2s;
+}
 *,
 input,
 select,
