--- a/source/templates/pages/about.html
+++ b/source/templates/pages/about.html
@@ -6,7 +6,7 @@ name: about
 
 <div class="container m-b-40">
 	<div class="row">
-		<div class="col-md-48 col-lg-12">
+		<div class="col-xs-12">
 			
 			{{> leftnav }}
 
@@ -15,7 +15,7 @@ name: about
 			</div>
 
 		</div>
-		<div class="col-md-48 col-lg-36">
+		<div class="col-xs-36">
 			
 			<div class="page">
 				<div class="about">
@@ -58,7 +58,7 @@ name: about
 						“Уникум“ в цифрах
 					</h2>
 					<div class="row about__nums">
-						<div class="col-md-48 col-lg-24">
+						<div class="col-xs-24">
 							<span class="about__num about__num--green about__num--green-frame">
 								81
 							</span>						
@@ -88,7 +88,7 @@ name: about
 								</li>
 							</ul>
 						</div>
-						<div class="col-md-48 col-lg-24">
+						<div class="col-xs-24">
 							<span class="about__num about__num--blue about__num--blue-frame">
 								99
 							</span>						
