--- a/source/templates/pages/article.html
+++ b/source/templates/pages/article.html
@@ -6,7 +6,7 @@ name: news
 
 <div class="container m-b-40">
 	<div class="row">
-		<div class="col-md-48 col-lg-12">
+		<div class="col-xs-12">
 			
 			{{> leftnav }}
 
@@ -15,7 +15,7 @@ name: news
 			</div>
 
 		</div>
-		<div class="col-md-48 col-lg-36">
+		<div class="col-xs-36">
 			
 			<div class="page">
 				
@@ -82,7 +82,7 @@ name: news
 					<ul class="news-list__items">
 						<li class="news-list__item">
 							<div class="row">
-								<div class="col-md-48 col-lg-37">
+								<div class="col-xs-37">
 									<span class="news-list__item-data">
 										22.12.2015
 									</span>
@@ -94,7 +94,7 @@ name: news
 										</span>
 									</a>
 								</div>
-								<div class="col-md-48 col-lg-11">
+								<div class="col-xs-11">
 									<a href="">
 										<img class="news-list__item-frame" src="images/pages-images/news/img-1.jpg" width="137" height="112" alt="" />
 									</a>
@@ -103,7 +103,7 @@ name: news
 						</li>
 						<li class="news-list__item">
 							<div class="row">
-								<div class="col-md-48 col-lg-37">
+								<div class="col-xs-37">
 									<span class="news-list__item-data">
 										22.12.2015
 									</span>
@@ -114,7 +114,7 @@ name: news
 										</span>
 									</a>
 								</div>
-								<div class="col-md-48 col-lg-11">
+								<div class="col-xs-11">
 									<a href="">
 										<img class="news-list__item-frame" src="images/pages-images/news/img-2.jpg" width="137" height="112" alt="" />
 									</a>
@@ -123,7 +123,7 @@ name: news
 						</li>
 						<li class="news-list__item">
 							<div class="row">
-								<div class="col-md-48 col-lg-37">
+								<div class="col-xs-37">
 									<span class="news-list__item-data">
 										22.12.2015
 									</span>
@@ -135,7 +135,7 @@ name: news
 										</span>
 									</a>
 								</div>
-								<div class="col-md-48 col-lg-11">
+								<div class="col-xs-11">
 									<a href="">
 										<img class="news-list__item-frame" src="images/pages-images/news/img-3.jpg" width="137" height="112" alt="" />
 									</a>
