--- a/source/templates/pages/docs.html
+++ b/source/templates/pages/docs.html
@@ -6,7 +6,7 @@ name: docs
 
 <div class="container m-b-40">
 	<div class="row">
-		<div class="col-md-48 col-lg-12">
+		<div class="col-xs-12">
 			
 			{{> leftnav }}
 
@@ -15,7 +15,7 @@ name: docs
 			</div>
 
 		</div>
-		<div class="col-md-48 col-lg-36">
+		<div class="col-xs-36">
 			
 			<div class="page">
 
@@ -34,7 +34,7 @@ name: docs
 					</div>
 
 					<div class="row docs__item">
-						<div class="col-md-48 col-lg-42 col-lg-offset-6">
+						<div class="col-xs-42 col-xs-offset-6">
 							<h2 class="docs__item-name">
 								<a class="decorate" href="">
 									<i class="icons icons--doc"></i>
@@ -51,7 +51,7 @@ name: docs
 					</div>
 
 					<div class="row docs__item">
-						<div class="col-md-48 col-lg-42 col-lg-offset-6">
+						<div class="col-xs-42 col-xs-offset-6">
 							<h2 class="docs__item-name">
 								<a class="decorate" href="">
 									<i class="icons icons--pdf"></i>
@@ -67,7 +67,7 @@ name: docs
 					</div>
 
 					<div class="row docs__item">
-						<div class="col-md-48 col-lg-42 col-lg-offset-6">
+						<div class="col-xs-42 col-xs-offset-6">
 							<h2 class="docs__item-name">
 								<a class="decorate" href="">
 									<i class="icons icons--xls"></i>
@@ -84,7 +84,7 @@ name: docs
 					</div>
 					
 					<div class="row docs__item">
-						<div class="col-md-48 col-lg-42 col-lg-offset-6">
+						<div class="col-xs-42 col-xs-offset-6">
 							<h2 class="docs__item-name">
 								<a class="decorate" href="">
 									<i class="icons icons--xls"></i>
@@ -100,7 +100,7 @@ name: docs
 					</div>
 
 					<div class="row docs__item">
-						<div class="col-md-48 col-lg-42 col-lg-offset-6">
+						<div class="col-xs-42 col-xs-offset-6">
 							<h2 class="docs__item-name">
 								<a class="decorate" href="">
 									<i class="icons icons--doc"></i>
@@ -117,7 +117,7 @@ name: docs
 					</div>
 
 					<div class="row docs__item">
-						<div class="col-md-48 col-lg-42 col-lg-offset-6">
+						<div class="col-xs-42 col-xs-offset-6">
 							<h2 class="docs__item-name">
 								<a class="decorate" href="">
 									<i class="icons icons--pdf"></i>
@@ -133,7 +133,7 @@ name: docs
 					</div>
 
 					<div class="row docs__item">
-						<div class="col-md-48 col-lg-42 col-lg-offset-6">
+						<div class="col-xs-42 col-xs-offset-6">
 							<h2 class="docs__item-name">
 								<a class="decorate" href="">
 									<i class="icons icons--doc"></i>
@@ -150,7 +150,7 @@ name: docs
 					</div>
 
 					<div class="row docs__item">
-						<div class="col-md-48 col-lg-42 col-lg-offset-6">
+						<div class="col-xs-42 col-xs-offset-6">
 							<h2 class="docs__item-name">
 								<a class="decorate" href="">
 									<i class="icons icons--xls"></i>
