--- a/source/templates/pages/employees.html
+++ b/source/templates/pages/employees.html
@@ -6,7 +6,7 @@ name: health-center
 
 <div class="container m-b-40">
 	<div class="row">
-		<div class="col-md-48 col-lg-12">
+		<div class="col-xs-12">
 			
 			{{> leftnav }}
 
@@ -15,7 +15,7 @@ name: health-center
 			</div>
 
 		</div>
-		<div class="col-md-48 col-lg-36">
+		<div class="col-xs-36">
 			
 			<div class="page">
 
@@ -40,12 +40,12 @@ name: health-center
 									Директор
 								</h3>
 							</div>
-							<div class="col-md-48 col-lg-12">
+							<div class="col-xs-12">
 								<a class="employees__item-frame" href="#">
 									<img src="images/pages-images/employees/img-1.jpg" width="112" height="112" alt="" />
 								</a>
 							</div>
-							<div class="col-md-48 col-lg-36">
+							<div class="col-xs-36">
 								<span class="employees__item-name">
 									Константинопольский Константин
 									<br />
@@ -68,7 +68,7 @@ name: health-center
 					</h1>
 					<div class="employees__line">
 						<div class="row">
-							<div class="col-md-48 col-lg-16 employees__item">
+							<div class="col-xs-16 employees__item">
 								<a class="employees__item-frame" href="#">
 									<img src="images/pages-images/employees/img-2.jpg" width="112" height="112" alt="" />
 								</a>
@@ -85,7 +85,7 @@ name: health-center
 									группы
 								</span>
 							</div>
-							<div class="col-md-48 col-lg-16 employees__item">
+							<div class="col-xs-16 employees__item">
 								<a class="employees__item-frame" href="#">
 									<img src="images/pages-images/employees/img-3.jpg" width="112" height="112" alt="" />
 								</a>
@@ -102,7 +102,7 @@ name: health-center
 									группы
 								</span>
 							</div>
-							<div class="col-md-48 col-lg-16 employees__item">
+							<div class="col-xs-16 employees__item">
 								<a class="employees__item-frame" href="#">
 									<img src="images/pages-images/employees/img-4.jpg" width="112" height="112" alt="" />
 								</a>
@@ -123,7 +123,7 @@ name: health-center
 					</div>
 					<div class="employees__line">
 						<div class="row">
-							<div class="col-md-48 col-lg-16 employees__item">
+							<div class="col-xs-16 employees__item">
 								<a class="employees__item-frame" href="#">
 									<img src="images/pages-images/employees/img-5.jpg" width="112" height="112" alt="" />
 								</a>
@@ -140,7 +140,7 @@ name: health-center
 									группы
 								</span>
 							</div>
-							<div class="col-md-48 col-lg-16 employees__item">
+							<div class="col-xs-16 employees__item">
 								<a class="employees__item-frame" href="#">
 									<img src="images/pages-images/employees/img-6.jpg" width="112" height="112" alt="" />
 								</a>
@@ -157,7 +157,7 @@ name: health-center
 									ритмики
 								</span>
 							</div>
-							<div class="col-md-48 col-lg-16 employees__item">
+							<div class="col-xs-16 employees__item">
 								<a class="employees__item-frame" href="#">
 									<img src="images/pages-images/employees/img-7.jpg" width="112" height="112" alt="" />
 								</a>
@@ -178,7 +178,7 @@ name: health-center
 					</div>
 					<div class="employees__line">
 						<div class="row">
-							<div class="col-md-48 col-lg-16 employees__item">
+							<div class="col-xs-16 employees__item">
 								<a class="employees__item-frame" href="#">
 									<img src="images/pages-images/employees/img-8.jpg" width="112" height="112" alt="" />
 								</a>
@@ -195,7 +195,7 @@ name: health-center
 									группы
 								</span>
 							</div>
-							<div class="col-md-48 col-lg-16 employees__item">
+							<div class="col-xs-16 employees__item">
 								<a class="employees__item-frame" href="#">
 									<img src="images/pages-images/employees/img-9.jpg" width="112" height="112" alt="" />
 								</a>
@@ -212,7 +212,7 @@ name: health-center
 									ритмики
 								</span>
 							</div>
-							<div class="col-md-48 col-lg-16 employees__item">
+							<div class="col-xs-16 employees__item">
 								<a class="employees__item-frame" href="#">
 									<img src="images/pages-images/employees/img-10.jpg" width="112" height="112" alt="" />
 								</a>
@@ -237,7 +237,7 @@ name: health-center
 					</h1>
 					<div class="employees__line">
 						<div class="row">
-							<div class="col-md-48 col-lg-16 employees__item">
+							<div class="col-xs-16 employees__item">
 								<a class="employees__item-frame" href="#">
 									<img src="images/pages-images/employees/img-11.jpg" width="112" height="112" alt="" />
 								</a>
@@ -254,7 +254,7 @@ name: health-center
 									безопасности
 								</span>
 							</div>
-							<div class="col-md-48 col-lg-16 employees__item">
+							<div class="col-xs-16 employees__item">
 								<a class="employees__item-frame" href="#">
 									<img src="images/pages-images/employees/img-12.jpg" width="112" height="112" alt="" />
 								</a>
@@ -271,7 +271,7 @@ name: health-center
 									охраны
 								</span>
 							</div>
-							<div class="col-md-48 col-lg-16 employees__item">
+							<div class="col-xs-16 employees__item">
 								<a class="employees__item-frame" href="#">
 									<img src="images/pages-images/employees/img-13.jpg" width="112" height="112" alt="" />
 								</a>
