--- a/source/templates/pages/health-article.html
+++ b/source/templates/pages/health-article.html
@@ -6,7 +6,7 @@ name: health-article
 
 <div class="container m-b-40">
 	<div class="row">
-		<div class="col-md-48 col-lg-12">
+		<div class="col-xs-12">
 			
 			{{> leftnav-services }}
 
@@ -15,7 +15,7 @@ name: health-article
 			</div>
 
 		</div>
-		<div class="col-md-48 col-lg-36">
+		<div class="col-xs-36">
 			
 			<div class="page">
 
@@ -62,7 +62,7 @@ name: health-article
 							Cтоимость:
 						</h2>
 						<div class="row row-eq-height">
-							<div class="col-md-48 col-lg-23 health-article__border">
+							<div class="col-xs-23 health-article__border">
 								<p class="health-article__prices-value">
 									800 <span class="rub">a</span>
 								</p>
@@ -70,7 +70,7 @@ name: health-article
 									Один сеанс массажа проблемной зоны
 								</p>
 							</div>
-							<div class="col-md-48 col-lg-23 col-lg-offset-2 health-article__border">
+							<div class="col-xs-23 col-xs-offset-2 health-article__border">
 								<p class="health-article__prices-value">
 									1000 <span class="rub">a</span>
 								</p>
@@ -99,11 +99,10 @@ name: health-article
 					
 					
 					<!-- [Slider] -->
-					<div class="slider-frame m-t-50 m-b-50">
-						<div class="slider-frame__rotate">
-							
-							<div id="fscreen" class="fscreen">
-								
+					<div id="fscreen" class="fscreen">
+	
+						<div class="slider-frame m-t-50 m-b-50">
+							<div class="slider-frame__rotate">
 								<div id="fscreen-slider" class="fscreen-slider">
 									
 									<div class="fscreen-slider-inner">
@@ -126,41 +125,40 @@ name: health-article
 									<div class="fscreen-slider-title">
 										<ul>
 											<li>Название фотографии,<br />мероприятия или </li>
+											<li>Название фотографии</li>
 											<li>Название фотографии,<br />мероприятия или места</li>
-											<li>Название фотографии,<br />мероприятия или места</li>
-											<li>Название фотографии,<br />мероприятия или места</li>
+											<li>Название фотографии</li>
 										</ul>
 									</div>
 									
 								</div>
-								
-								<div id="fscreen-thumbs" class="fscreen-thumbs fscreen-thumbs--vertical">
-									<div class="fscreen-thumbs-inner">
-										<ul>
-											<li>
-												<a class="thumb" href="images/pages-images/health-article/slider/thumb-1.jpg"></a>
-											</li>
-											<li>
-												<a class="thumb" href="images/pages-images/health-article/slider/thumb-2.jpg"></a>
-											</li>
-											<li>
-												<a class="thumb" href="images/pages-images/health-article/slider/thumb-3.jpg"></a>
-											</li>
-											<li>
-												<a class="thumb" href="images/pages-images/health-article/slider/thumb-4.jpg"></a>
-											</li>
-										</ul>
-									</div>
-								</div>
-								
 							</div>
-							
 						</div>
+						
+								
+						<div id="fscreen-thumbs" class="fscreen-thumbs fscreen-thumbs--vertical">
+							<div class="fscreen-thumbs-inner">
+								<ul>
+									<li>
+										<a class="thumb" href="images/pages-images/health-article/slider/thumb-1.jpg"></a>
+									</li>
+									<li>
+										<a class="thumb" href="images/pages-images/health-article/slider/thumb-2.jpg"></a>
+									</li>
+									<li>
+										<a class="thumb" href="images/pages-images/health-article/slider/thumb-3.jpg"></a>
+									</li>
+									<li>
+										<a class="thumb" href="images/pages-images/health-article/slider/thumb-4.jpg"></a>
+									</li>
+								</ul>
+							</div>
+						</div>
+						
 					</div>
-					<!-- [/Slider] -->
+					<!-- [/Slider] -->	
 					
-					
-					<!-- [Slider] -->
+					<!-- [Slider]
 					<div class="slider-frame m-t-50 m-b-50">
 						<div class="slider-frame__rotate">
 							<div class="unqslider js-slider">
@@ -211,7 +209,7 @@ name: health-article
 							</div>
 						</div>
 					</div>
-					<!-- [/Slider] -->
+					[/Slider] -->
 
 				</div>
 
