--- a/source/templates/pages/health-center.html
+++ b/source/templates/pages/health-center.html
@@ -6,7 +6,7 @@ name: health-center
 
 <div class="container m-b-40">
 	<div class="row">
-		<div class="col-md-48 col-lg-12">
+		<div class="col-xs-12">
 			
 			{{> leftnav }}
 
@@ -15,7 +15,7 @@ name: health-center
 			</div>
 
 		</div>
-		<div class="col-md-48 col-lg-36">
+		<div class="col-xs-36">
 			
 			<div class="page">
 
@@ -32,12 +32,12 @@ name: health-center
 					</div>
 
 					<div class="row health-center__item">
-						<div class="col-md-48 col-lg-12">
+						<div class="col-xs-12">
 							<a href="">
 								<img class="health-center__item-frame" src="images/pages-images/centr/img-1.jpg" width="112" height="112" alt />
 							</a>
 						</div>
-						<div class="col-md-48 col-lg-36">
+						<div class="col-xs-36">
 							<h2 class="health-center__item-name">
 								<a class="decorate" href="">
 									Массаж для детей и взрослых
@@ -54,12 +54,12 @@ name: health-center
 					</div>
 
 					<div class="row health-center__item">
-						<div class="col-md-48 col-lg-12">
+						<div class="col-xs-12">
 							<a href="">
 								<img class="health-center__item-frame" src="images/pages-images/centr/img-2.jpg" width="112" height="112" alt />
 							</a>
 						</div>
-						<div class="col-md-48 col-lg-36">
+						<div class="col-xs-36">
 							<h2 class="health-center__item-name">
 								<a class="decorate" href="">
 									Лечебная физкультура
@@ -76,12 +76,12 @@ name: health-center
 					</div>
 
 					<div class="row health-center__item">
-						<div class="col-md-48 col-lg-12">
+						<div class="col-xs-12">
 							<a href="">
 								<img class="health-center__item-frame" src="images/pages-images/centr/img-3.jpg" width="112" height="112" alt />
 							</a>
 						</div>
-						<div class="col-md-48 col-lg-36">
+						<div class="col-xs-36">
 							<h2 class="health-center__item-name">
 								<a class="decorate" href="">
 									Бассейн + сауна + фитобар
@@ -98,12 +98,12 @@ name: health-center
 					</div>
 
 					<div class="row health-center__item">
-						<div class="col-md-48 col-lg-12">
+						<div class="col-xs-12">
 							<a href="">
 								<img class="health-center__item-frame" src="images/pages-images/centr/img-4.jpg" width="112" height="112" alt />
 							</a>
 						</div>
-						<div class="col-md-48 col-lg-36">
+						<div class="col-xs-36">
 							<h2 class="health-center__item-name">
 								<a class="decorate" href="">
 									Йога для малышей
@@ -120,12 +120,12 @@ name: health-center
 					</div>
 
 					<div class="row health-center__item">
-						<div class="col-md-48 col-lg-12">
+						<div class="col-xs-12">
 							<a href="">
 								<img class="health-center__item-frame" src="images/pages-images/centr/img-5.jpg" width="112" height="112" alt />
 							</a>
 						</div>
-						<div class="col-md-48 col-lg-36">
+						<div class="col-xs-36">
 							<h2 class="health-center__item-name">
 								<a class="decorate" href="">
 									Йога для будущих мам
