--- a/source/templates/pages/index.html
+++ b/source/templates/pages/index.html
@@ -6,12 +6,12 @@ name: index
 
 <div class="container m-b-40">
 	<div class="row">
-		<div class="col-md-48 col-lg-12">
+		<div class="col-xs-12">
 			
 			{{> leftnav }}
 
 		</div>
-		<div class="col-md-48 col-lg-36">
+		<div class="col-xs-36">
 			
 			<div id="carousel-example-generic" class="carousel index-carousel slide" data-ride="carousel">
 
@@ -42,12 +42,12 @@ name: index
 <div class="dotblock m-b-60">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-48 col-lg-8">
+			<div class="col-xs-8">
 				<a class="dotblock__img" href="">
 					<img src="images/iconography/img-1.png" width="175" height="130" alt="" />
 				</a>
 			</div>
-			<div class="col-md-48 col-lg-8">
+			<div class="col-xs-8">
 				<h3 class="dotblock__title">
 					<a class="orange" href="">
 						<span class="decorate">ЯСЛИ</span>
@@ -57,12 +57,12 @@ name: index
 					до 8 месяцев
 				</p>
 			</div>
-			<div class="col-md-48 col-lg-8">
+			<div class="col-xs-8">
 				<a class="dotblock__img" href="">
 					<img src="images/iconography/img-2.png" width="175" height="130" alt="" />
 				</a>
 			</div>
-			<div class="col-md-48 col-lg-8">
+			<div class="col-xs-8">
 				<h3 class="dotblock__title">
 					<a class="marine" href="">
 						<span class="decorate">ДЕТСКИЙ</span><span class="decorate">САД</span>
@@ -72,12 +72,12 @@ name: index
 					от 1 до 8 лет
 				</p>
 			</div>
-			<div class="col-md-48 col-lg-8">
+			<div class="col-xs-8">
 				<a class="dotblock__img" href="">
 					<img src="images/iconography/img-3.png" width="175" height="130" alt="" />
 				</a>
 			</div>
-			<div class="col-md-48 col-lg-8">
+			<div class="col-xs-8">
 				<h3 class="dotblock__title">
 					<a class="green" href="">
 						<span class="decorate">НАЧАЛЬНАЯ</span><span class="decorate">ШКОЛА</span>
@@ -93,12 +93,12 @@ name: index
 
 <div class="container m-b-20">
 	<div class="row">
-		<div class="col-md-48 col-lg-16 p-t-75">
+		<div class="col-xs-16 p-t-75">
 			<div class="index-special">
 				<a class="index-special__frame" href=""></a>
 			</div>
 		</div>
-		<div class="col-md-48 col-lg-32">
+		<div class="col-xs-32">
 			<div class="news">
 				
 				<h2 class="news__title m-b-40">
@@ -106,12 +106,12 @@ name: index
 				</h2>
 
 				<div class="row news__item">
-					<div class="col-md-48 col-lg-11">
+					<div class="col-xs-11">
 						<a class="news__item-img" href="">
 							<img src="images/pages-images/index/news/img-1.jpg" width="137" height="112" alt="" />
 						</a>
 					</div>
-					<div class="col-md-48 col-lg-37">
+					<div class="col-xs-37">
 						<span class="news__item-date">
 							22.12.2015
 						</span>
@@ -126,12 +126,12 @@ name: index
 				</div>
 
 				<div class="row news__item">
-					<div class="col-md-48 col-lg-11">
+					<div class="col-xs-11">
 						<a class="news__item-img" href="">
 							<img src="images/pages-images/index/news/img-2.jpg" width="137" height="112" alt="" />
 						</a>
 					</div>
-					<div class="col-md-48 col-lg-37">
+					<div class="col-xs-37">
 						<span class="news__item-date">
 							22.12.2015
 						</span>
@@ -146,12 +146,12 @@ name: index
 				</div>
 
 				<div class="row news__item">
-					<div class="col-md-48 col-lg-11">
+					<div class="col-xs-11">
 						<a class="news__item-img" href="">
 							<img src="images/pages-images/index/news/img-3.jpg" width="137" height="112" alt="" />
 						</a>
 					</div>
-					<div class="col-md-48 col-lg-37">
+					<div class="col-xs-37">
 						<span class="news__item-date">
 							22.12.2015
 						</span>
@@ -188,7 +188,7 @@ name: index
 		</p>
 	</div>
 	<div class="row m-t-30">
-		<div class="col-md-48 col-lg-16">
+		<div class="col-xs-16">
 			<a class="addservices__frame" href="">
 				<span class="addservices__frame-round">
 					<img src="images/pages-images/index/services/img-1.jpg" width="112" height="112" alt="" />
@@ -199,7 +199,7 @@ name: index
 				</span>
 			</a>
 		</div>
-		<div class="col-md-48 col-lg-16">
+		<div class="col-xs-16">
 			<a class="addservices__frame" href="">
 				<span class="addservices__frame-round">
 					<img src="images/pages-images/index/services/img-2.jpg" width="112" height="112" alt="" />
@@ -208,7 +208,7 @@ name: index
 				</span>
 			</a>
 		</div>
-		<div class="col-md-48 col-lg-16">
+		<div class="col-xs-16">
 			<a class="addservices__frame" href="">
 				<span class="addservices__frame-round">
 					<img src="images/pages-images/index/services/img-3.jpg" width="112" height="112" alt="" />
@@ -222,7 +222,7 @@ name: index
 	</div>
 
 	<div class="row m-t-30">
-		<div class="col-md-48 col-lg-16">
+		<div class="col-xs-16">
 			<a class="addservices__frame" href="">
 				<span class="addservices__frame-round">
 					<img src="images/pages-images/index/services/img-4.jpg" width="112" height="112" alt="" />
@@ -233,7 +233,7 @@ name: index
 				</span>
 			</a>
 		</div>
-		<div class="col-md-48 col-lg-16">
+		<div class="col-xs-16">
 			<a class="addservices__frame" href="">
 				<span class="addservices__frame-round">
 					<img src="images/pages-images/index/services/img-5.jpg" width="112" height="112" alt="" />
@@ -244,7 +244,7 @@ name: index
 				</span>
 			</a>
 		</div>
-		<div class="col-md-48 col-lg-16">
+		<div class="col-xs-16">
 			<a class="addservices__frame" href="">
 				<span class="addservices__frame-round">
 					<img src="images/pages-images/index/services/img-6.jpg" width="112" height="112" alt="" />
