--- a/source/templates/pages/news.html
+++ b/source/templates/pages/news.html
@@ -6,7 +6,7 @@ name: news
 
 <div class="container m-b-40">
 	<div class="row">
-		<div class="col-md-48 col-lg-12">
+		<div class="col-xs-12">
 			
 			{{> leftnav }}
 
@@ -15,7 +15,7 @@ name: news
 			</div>
 
 		</div>
-		<div class="col-md-48 col-lg-36">
+		<div class="col-xs-36">
 			
 			<div class="page">
 
@@ -42,7 +42,7 @@ name: news
 					<ul class="news-list__items">
 						<li class="news-list__item">
 							<div class="row">
-								<div class="col-md-48 col-lg-37">
+								<div class="col-xs-37">
 									<span class="news-list__item-data">
 										22.12.2015
 									</span>
@@ -54,7 +54,7 @@ name: news
 										</span>
 									</a>
 								</div>
-								<div class="col-md-48 col-lg-11">
+								<div class="col-xs-11">
 									<a href="">
 										<img class="news-list__item-frame" src="images/pages-images/news/img-1.jpg" width="137" height="112" alt="" />
 									</a>
@@ -63,7 +63,7 @@ name: news
 						</li>
 						<li class="news-list__item">
 							<div class="row">
-								<div class="col-md-48 col-lg-37">
+								<div class="col-xs-37">
 									<span class="news-list__item-data">
 										22.12.2015
 									</span>
@@ -74,7 +74,7 @@ name: news
 										</span>
 									</a>
 								</div>
-								<div class="col-md-48 col-lg-11">
+								<div class="col-xs-11">
 									<a href="">
 										<img class="news-list__item-frame" src="images/pages-images/news/img-2.jpg" width="137" height="112" alt="" />
 									</a>
@@ -83,7 +83,7 @@ name: news
 						</li>
 						<li class="news-list__item">
 							<div class="row">
-								<div class="col-md-48 col-lg-37">
+								<div class="col-xs-37">
 									<span class="news-list__item-data">
 										22.12.2015
 									</span>
@@ -95,7 +95,7 @@ name: news
 										</span>
 									</a>
 								</div>
-								<div class="col-md-48 col-lg-11">
+								<div class="col-xs-11">
 									<a href="">
 										<img class="news-list__item-frame" src="images/pages-images/news/img-3.jpg" width="137" height="112" alt="" />
 									</a>
@@ -104,7 +104,7 @@ name: news
 						</li>
 						<li class="news-list__item">
 							<div class="row">
-								<div class="col-md-48 col-lg-37">
+								<div class="col-xs-37">
 									<span class="news-list__item-data">
 										22.12.2015
 									</span>
@@ -116,14 +116,14 @@ name: news
 										</span>
 									</a>
 								</div>
-								<div class="col-md-48 col-lg-11">
+								<div class="col-xs-11">
 									&nbsp;
 								</div>
 							</div>
 						</li>
 						<li class="news-list__item">
 							<div class="row">
-								<div class="col-md-48 col-lg-37">
+								<div class="col-xs-37">
 									<span class="news-list__item-data">
 										22.12.2015
 									</span>
@@ -134,7 +134,7 @@ name: news
 										</span>
 									</a>
 								</div>
-								<div class="col-md-48 col-lg-11">
+								<div class="col-xs-11">
 									<a href="">
 										<img class="news-list__item-frame" src="images/pages-images/news/img-4.jpg" width="137" height="112" alt="" />
 									</a>
