--- a/source/templates/pages/playschool.html
+++ b/source/templates/pages/playschool.html
@@ -78,7 +78,7 @@ name: playschool
 				</p>
 				
 				<div class="row p-t-30 m-b-40">
-					<div class="col-md-48 col-lg-16">
+					<div class="col-xs-16">
 						
 						<h4 class="playschool__smalltitle orange">
 							Много возможностей
@@ -108,8 +108,70 @@ name: playschool
 						</ul>
 					
 					</div>
-					<div class="col-md-48 col-lg-28 col-lg-offset-4">
+					<div class="col-xs-28 col-xs-offset-4">
+
+						<!-- [Slider] -->
+						<div id="fscreen" class="fscreen fscreen--sm">
+		
+							<div class="slider-frame m-t-50 m-b-50">
+								<div class="slider-frame__rotate">
+									<div id="fscreen-slider" class="fscreen-slider">
+										
+										<div class="fscreen-slider-inner">
+											<ul>
+												<li>
+													<a href="images/pages-images/health-article/slider/img-big.jpg"></a>
+												</li>
+												<li>
+													<a href="images/pages-images/health-article/slider/img-big.jpg"></a>
+												</li>
+												<li>
+													<a href="images/pages-images/health-article/slider/img-big.jpg"></a>
+												</li>
+												<li>
+													<a href="images/pages-images/health-article/slider/img-big.jpg"></a>
+												</li>
+											</ul>
+										</div>
+										
+										<div class="fscreen-slider-title">
+											<ul>
+												<li>Название фотографии, мероприятия или места</li>
+												<li>Название фотографии</li>
+												<li>Название фотографии, мероприятия</li>
+												<li>Название фотографии или места</li>
+											</ul>
+										</div>
+										
+									</div>
+								</div>
+							</div>
+							
+									
+							<div id="fscreen-thumbs" class="fscreen-thumbs fscreen-thumbs--vertical">
+								<div class="fscreen-thumbs-inner">
+									<ul>
+										<li>
+											<a class="thumb" href="images/pages-images/health-article/slider/thumb-1.jpg"></a>
+										</li>
+										<li>
+											<a class="thumb" href="images/pages-images/health-article/slider/thumb-2.jpg"></a>
+										</li>
+										<li>
+											<a class="thumb" href="images/pages-images/health-article/slider/thumb-3.jpg"></a>
+										</li>
+										<li>
+											<a class="thumb" href="images/pages-images/health-article/slider/thumb-4.jpg"></a>
+										</li>
+									</ul>
+								</div>
+							</div>
+							
+						</div>
+						<!-- [/Slider] -->			
 						
+						
+						<!-- [Slider]
 						<div class="slider-frame">
 							<div class="slider-frame__rotate">
 								<div class="unqslider js-slider">
@@ -168,18 +230,19 @@ name: playschool
 								</div>
 							</div>
 						</div>
+						<!-- [/Slider] -->
 						
 					</div>
 				</div>
 				
 				<!-- [Сбалансированное питание] -->
 				<div class="row m-b-40">
-					<div class="col-md-48 col-lg-20">
+					<div class="col-xs-20">
 						
 						<img src="images/iconography/img-4.png" width="348" height="348" alt="" />
 						
 					</div>
-					<div class="col-md-48 col-lg-28 p-t-30">
+					<div class="col-xs-28 p-t-30">
 						
 						<h3 class="playschool__subtitle">
 							Сбалансированное питание
@@ -198,7 +261,7 @@ name: playschool
 				
 				<!-- [Внимание к здоровью] -->
 				<div class="row m-b-65">
-					<div class="col-md-48 col-lg-20">
+					<div class="col-xs-20">
 						
 						<h3 class="playschool__subtitle">
 							Внимание к здоровью
@@ -229,7 +292,7 @@ name: playschool
 						</ul>
 						
 					</div>
-					<div class="col-md-48 col-lg-28">
+					<div class="col-xs-28">
 						
 						<img src="images/iconography/img-5.png" width="574" height="556" alt="" />
 
@@ -238,7 +301,7 @@ name: playschool
 				
 				<!-- [Расположение] -->
 				<div class="row m-b-30">
-					<div class="col-md-48 col-lg-20">
+					<div class="col-xs-20">
 						
 						<h3 class="playschool__subtitle">
 							Расположение
@@ -271,11 +334,11 @@ name: playschool
 						</ul>
 						
 					</div>
-					<div class="col-md-48 col-lg-28 p-t-55">
+					<div class="col-xs-28 p-t-55">
 						
 						<iframe class="contacts__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4518.813197284275!2d37.26916863359072!3d55.50786501832352!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTXCsDMwJzI4LjMiTiAzN8KwMTYnMjQuOCJF!5e0!3m2!1sru!2sru!4v1452607698737" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 						
-						<a class="about__readmore" href=""><span class="decorate">Посмотреть весь перечень</span></a>
+						<a class="about__readmore" href="https://maps.google.com/maps?ll=55.507861,37.273556&z=15&t=m&hl=ru-RU&gl=RU&mapclient=embed" target="_blank"><span class="decorate">Посмотреть в новом окне</span></a>
 
 					</div>
 				</div>
@@ -321,7 +384,7 @@ name: playschool
 		</p>
 	</div>
 	<div class="row m-t-30">
-		<div class="col-md-48 col-lg-16">
+		<div class="col-xs-16">
 			<a class="addservices__frame" href="">
 				<span class="addservices__frame-round">
 					<img src="images/pages-images/index/services/img-1.jpg" width="112" height="112" alt="" />
@@ -332,7 +395,7 @@ name: playschool
 				</span>
 			</a>
 		</div>
-		<div class="col-md-48 col-lg-16">
+		<div class="col-xs-16">
 			<a class="addservices__frame" href="">
 				<span class="addservices__frame-round">
 					<img src="images/pages-images/index/services/img-2.jpg" width="112" height="112" alt="" />
@@ -341,7 +404,7 @@ name: playschool
 				</span>
 			</a>
 		</div>
-		<div class="col-md-48 col-lg-16">
+		<div class="col-xs-16">
 			<a class="addservices__frame" href="">
 				<span class="addservices__frame-round">
 					<img src="images/pages-images/index/services/img-3.jpg" width="112" height="112" alt="" />
@@ -355,7 +418,7 @@ name: playschool
 	</div>
 
 	<div class="row m-t-30">
-		<div class="col-md-48 col-lg-16">
+		<div class="col-xs-16">
 			<a class="addservices__frame" href="">
 				<span class="addservices__frame-round">
 					<img src="images/pages-images/index/services/img-4.jpg" width="112" height="112" alt="" />
@@ -366,7 +429,7 @@ name: playschool
 				</span>
 			</a>
 		</div>
-		<div class="col-md-48 col-lg-16">
+		<div class="col-xs-16">
 			<a class="addservices__frame" href="">
 				<span class="addservices__frame-round">
 					<img src="images/pages-images/index/services/img-5.jpg" width="112" height="112" alt="" />
@@ -377,7 +440,7 @@ name: playschool
 				</span>
 			</a>
 		</div>
-		<div class="col-md-48 col-lg-16">
+		<div class="col-xs-16">
 			<a class="addservices__frame" href="">
 				<span class="addservices__frame-round">
 					<img src="images/pages-images/index/services/img-6.jpg" width="112" height="112" alt="" />
