Complete versions sliders

--- a/source/stylesheets/pages/fscreen-slider/fscreen-slider.less
+++ b/source/stylesheets/pages/fscreen-slider/fscreen-slider.less
@@ -2,14 +2,14 @@
 .fscreen {
 	position: relative;
 	
-	&-slider-inner ul {
+	& &-slider-inner ul {
 		padding-bottom: 350px;
 	}
-	&-thumbs {
+	& &-thumbs {
 		height: 350px;
 	}
-	&-slider,
-	&-slider ul {
+	& &-slider,
+	& &-slider ul {
 		width: 540px;
 	}
 	&--sm {
