--- a/source/stylesheets/pages/main/main.less
+++ b/source/stylesheets/pages/main/main.less
@@ -51,6 +51,11 @@
 					margin-top: 30px;
 				}
 			}
+			&:hover {
+				.decorate {
+					border-bottom-color: transparent;
+				}
+			}
 		}
 	}
 	&__text {
