--- a/source/stylesheets/pages/playschool/playschool.less
+++ b/source/stylesheets/pages/playschool/playschool.less
@@ -45,6 +45,7 @@
 		padding-left: 60px;
 		padding-right: 60px;
 	}
+	h1,
 	&__title {
 		font-size: 70px;
 		line-height: 1.1;
@@ -54,12 +55,14 @@
 		right: 0px;
 		left: 0px;
 	}
+	h3,
 	&__subtitle {
 		font-family: 'houschka_roundedextrabold';
 		color: @base-dark-color;
 		font-size: 30px;
 		margin-bottom: 31px;
 	}
+	h4,
 	&__smalltitle {
 		font-family: 'intro_script_rh2_base';
 		font-size: 30px;
