--- a/source/stylesheets/pages/_variables.less
+++ b/source/stylesheets/pages/_variables.less
@@ -16,6 +16,28 @@
 
 /* 5 Columns Maket
    ========================================================================== */
+
+.gray-color {
+	color: @gray-color!important;
+}
+.orange-color {
+	color: @orange-color!important;
+}
+.marine-color {
+	color: @marine-color!important;
+}
+.green-color {
+	color: @green-color!important;
+}
+.blue-color {
+	color: @blue-color!important;
+}
+.red-color {
+	color: @red-color!important;
+}
+.border-color {
+	color: @border-color!important;
+}
 /*
 .col-xs-5,
 .col-sm-5,
