--- a/source/stylesheets/pages/main/main.less
+++ b/source/stylesheets/pages/main/main.less
@@ -71,11 +71,15 @@
 .index-special {
 	max-width: 260px;
 	width: 260px;
-	min-height: 390px;
+	/*min-height: 390px;*/
 	border: 5px solid @border-color;
 	position: relative;
 	overflow: hidden;
 	display: block;
+	a,
+	img {
+		display: block;
+	}
 	img {
 		min-width: 100%;
 		height: auto;
