--- a/source/stylesheets/pages/total.less
+++ b/source/stylesheets/pages/total.less
@@ -151,7 +151,7 @@ a:active:focus,button:active:focus {
 .special {
 	background: #d4dee7;
 	width: 260px;
-	min-height: 390px;
+	/*min-height: 390px;*/
 }
 .star {
 	color: @red-color;
