--- a/source/stylesheets/pages/_navs.less
+++ b/source/stylesheets/pages/_navs.less
@@ -1,5 +1,9 @@
 
 .topnav {
+	&:after,
+	&:before {
+		background: transparent;
+	}
 	li {
 		&:before,
 		&:after {
@@ -97,6 +101,10 @@
 			background: transparent;
 		}
 	}
+	&:after,
+	&:before {
+		background: transparent;
+	}
 	&:before {
 		content: "";
 		display: block;
@@ -151,6 +159,10 @@
 }
 
 .btmnav {
+	&:after,
+	&:before {
+		background: transparent;
+	}
 	li {
 		&:before,
 		&:after {
