--- a/source/stylesheets/pages/total.less
+++ b/source/stylesheets/pages/total.less
@@ -41,6 +41,10 @@
 .display-inline-block {
 	display: inline-block!important;
 }
+body,
+html {
+	height: auto;
+}
 .content {
 	img {
 		max-width: 100%;
