--- a/source/stylesheets/pages/_variables.less
+++ b/source/stylesheets/pages/_variables.less
@@ -5,12 +5,16 @@
 @base-light-color:    #567;
 @base-dark-color:     #333;
 
+@menu-active-color:   #93bbca;
+
 @gray-color:          #999;
 @orange-color:        #f63;
 @marine-color:        #0ac;
 @green-color:         #5a0;
 @blue-color:          #0ac;
 @red-color:           #f63;
+@yellow-color:        #fa0;
+@violet-color:        #96c;
 @border-color:        #d4dee7;
 
 
@@ -34,6 +38,12 @@
 }
 .red-color {
 	color: @red-color!important;
+}
+.yellow-color {
+	color: @yellow-color!important;
+}
+.violet-color {
+	color: @violet-color!important;
 }
 .border-color {
 	color: @border-color!important;
