--- a/source/templates/partials/topnav.html
+++ b/source/templates/partials/topnav.html
@@ -10,7 +10,7 @@
 			<span class="decorate">Ясли</span>
 		</a>
 	</li>
-	<li class="topnav__item {{#is page.name 'kindergarten'}}active{{/is}}">
+	<li class="topnav__item {{#is page.name 'playschool'}}active{{/is}}">
 		<a class="marine" href="playschool.html">
 			<span class="decorate">Детский сад</span>
 		</a>
