--- a/source/templates/partials/header.html
+++ b/source/templates/partials/header.html
@@ -34,7 +34,7 @@
 		</div>
 	</div>
 	<div class="row header__bottom">
-		<div class="col-xs-42 col-xs-offset-3 p-l-15">
+		<div class="col-xs-48">
 			
 			{{> topnav }}
 
