Fix pasge styles: employees.html

--- a/source/stylesheets/pages/employees/employees.less
+++ b/source/stylesheets/pages/employees/employees.less
@@ -24,7 +24,9 @@
 	}
 	br {
 		display: block;
+		/*
 		line-height: 3.0rem;
+		*/
 	}
 	&__item {
 		margin-bottom: 34px;
@@ -36,7 +38,9 @@
 				padding-top: 10px;
 				margin-bottom: 4px;
 				max-width: 100%;
+				/*
 				line-height: 2.8rem;
+				*/
 			}
 			.employees__item-post {
 				margin-bottom: 9px;
