Fix speed slider index.html

--- a/source/stylesheets/pages/employees/employees.less
+++ b/source/stylesheets/pages/employees/employees.less
@@ -67,6 +67,7 @@
 			font-weight: 700;
 			display: block;
 			margin-bottom: 11px;
+			word-wrap: initial;
 		}
 		&-post {
 			display: block;
@@ -81,8 +82,8 @@
 			display: block;
 			overflow: hidden;
 			position: relative;
-			width: 122px;
-			height: 122px;
+			width: 120px;
+			height: 120px;
 			margin-bottom: 10px;
 			img {
 				display: block;
