--- a/source/stylesheets/pages/main/main.less
+++ b/source/stylesheets/pages/main/main.less
@@ -17,6 +17,16 @@
 		text-align: left;
 		line-height: 1.18;
 	}
+	
+	/*
+	.item {
+		transition: 0.9s ease-in-out left;
+	}
+	*/
+
+	.carousel-inner>.item {
+		transition: 0.94s ease-in-out transform, 0.94s ease-in-out left;
+	}
 }
 
 .dotblock {
