--- a/source/stylesheets/app.less
+++ b/source/stylesheets/app.less
@@ -1,5 +1,8 @@
 
 // Core variables and mixins
+@import "vendor/fancybox/jquery.fancybox.less";
+
+// Core variables and mixins
 @import "../../bower_components/bootstrap/less/variables.less";
 
 /* **************************** [Variables] ****************************** */
