--- a/source/stylesheets/pages/employees/employees.less
+++ b/source/stylesheets/pages/employees/employees.less
@@ -94,3 +94,25 @@
 		margin-right: -100px;
 	}
 }
+
+.fancybox-wrap {
+	.employees {
+		&__item {
+			&-name,
+			&-post {
+				max-width: 1000%;
+				line-height: 1.5;
+				p {
+					margin-bottom: 5px;
+				}
+				ul {
+					li {
+						line-height: 1.1;
+					}
+				}
+			}
+			
+		}
+	}
+}
+
