--- a/source/stylesheets/pages/main/main.less
+++ b/source/stylesheets/pages/main/main.less
@@ -2,7 +2,7 @@
 .index-carousel {
 	
 	& &__caption {
-		background: white;
+		background: rgba(255,255,255,0.80);
 		position: absolute;
 		left: auto;
 		right: 0px;
